--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   flame: ^0.21.0
   box2d_flame: ^0.4.5
   sensors: ^0.4.2+2
+  shared_preferences: ^0.5.7+3
+  wakelock: ^0.1.4+1
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
